fix and update evaluation pipeline

--- a/experiments/config.yaml
+++ b/experiments/config.yaml
@@ -1,10 +1,9 @@
-explore_world: False
-maze: True
-cube: False
+# Worlds to run on.
 worlds: 
   [
     'demo_maze',
   ]
+# Methods to run.
 planners:
   [
     'cvae',
@@ -15,16 +14,17 @@ planners:
     'twostage_predict_gain',
     'cnn_gain_predict',
     'cnn_uniform_gain_predict',
+    'uniform_gain_predict'
   ]
-n_samples: [1, 5]
-n_runs: 3
-plot: False
-regression: False
+n_samples: [1, 5]  # Numbers of samples to run for each method.
+n_runs:  5  # Number of runs for each method and samples.
+time_limit: 20  # minutes
+plot: True  # Create a summary plot afterwards.
+
+# Path to pre-trained models.
 path:
   cvae: "models/cvae.pt"
-  cvae_joint: "models/cvae_joint.pt" # cvae including gain estimation
-  gain_estimator: "models/gain_estimator.pt" # two stage, seperate gain estimator
+  cvae_joint: "models/cvae_joint.pt"
+  gain_estimator: "models/gain_estimator.pt"
   regression: "models/regression.pt"
-  cnn_gain_estimator: 'models/cnn_gain_estimator.pt'
-mean: 405.66498
-std: 138.44826
+  cnn_gain_estimator: "models/cnn_gain_estimator.pt"
